Add operator training materials and fix mock mode for screenshot capture
- Add comprehensive operator training guide with screenshot placeholders
- Add quick reference card for operators
- Add detailed screenshot capture guide for BA and testers
- Add mock mode support for running without Kafka
- Fix CancellationHandler to be conditional in mock mode
- Make CancellationHandler optional in PaymentOrchestratorService
- Add ReturnReasonCode enum for PACS.004 payment returns
- Add MockDataLoader for UI testing without Kafka
- Add startup script for screenshot capture mode
- Update application.properties with mock mode configuration
- Add supporting documentation and guides

--- a/payment-orchestrator/src/main/resources/application.properties
+++ b/payment-orchestrator/src/main/resources/application.properties
@@ -3,6 +3,9 @@ kafka.bootstrap.servers=localhost:9092
 kafka.consumer.group-id=payment-orchestrator-group
 kafka.consumer.auto-offset-reset=earliest
 
+# Error Management Mock Mode (set to true to test UI without Kafka)
+error.management.mock.mode=true
+
 # Spring Boot Configuration
 spring.application.name=payment-orchestrator
 server.port=8081
