--- a/payment-ingress/pom.xml
+++ b/payment-ingress/pom.xml
@@ -16,7 +16,7 @@
     <packaging>jar</packaging>
 
     <name>Payment Ingress</name>
-    <description>Ingress services for SWIFT, FED, CHIPS, and IBT</description>
+    <description>Ingress services for SWIFT, FED, CHIPS, and Wells-originated payments</description>
 
     <dependencies>
         <!-- Payment Common -->
@@ -30,6 +30,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- Spring Boot Web (for REST API) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <!-- Spring Kafka -->
